docs/examples/customization/configuration-snippets/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-configuration-snippet
  annotations:
    ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-Id: $request_id";

spec:
  rules:
  - host: custom.configuration.com
    http:
      paths:
      - backend:
          serviceName: http-svc
          servicePort: 80
        path: /
